--- a/codes/test_demo_yodas.ipynb
+++ b/codes/test_demo_yodas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "244b7073",
    "metadata": {},
    "outputs": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "c8a4d1cb",
    "metadata": {},
    "outputs": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "11085fef",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "2caf03d6",
    "metadata": {},
    "outputs": [
@@ -133,7 +133,7 @@
        "<IPython.lib.display.Audio object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "f8d2c2c9",
    "metadata": {},
    "outputs": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "94637979",
    "metadata": {},
    "outputs": [
@@ -305,30 +305,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Interval(0.0, 0.11, \"which\")\n",
-      "Interval(0.11, 0.45, \"sites\")\n",
-      "Interval(0.45, 0.68, \"have\")\n",
-      "Interval(0.68, 0.79, \"you\")\n",
-      "Interval(0.79, 1.0, \"been\")\n",
-      "Interval(1.0, 1.49, \"using\")\n",
-      "Interval(1.73, 1.87, \"and\")\n",
-      "Interval(1.87, 2.08, \"how\")\n",
-      "Interval(2.08, 2.35, \"did\")\n",
-      "Interval(2.35, 2.44, \"the\")\n",
-      "Interval(2.44, 2.7, \"use\")\n",
-      "Interval(2.7, 2.87, \"of\")\n",
-      "Interval(2.87, 3.05, \"these\")\n",
-      "Interval(3.05, 3.69, \"technologies\")\n",
-      "Interval(3.76, 4.16, \"assist\")\n",
-      "Interval(4.16, 4.27, \"your\")\n",
-      "Interval(4.27, 4.78, \"search\")\n"
+      "Interval(0.08, 0.23, \"the\")\n",
+      "Interval(0.23, 0.4, \"other\")\n",
+      "Interval(0.4, 0.64, \"thing\")\n",
+      "Interval(0.64, 0.91, \"about\")\n",
+      "Interval(0.91, 1.47, \"linkedin\")\n",
+      "Interval(1.47, 1.71, \"even\")\n",
+      "Interval(1.71, 1.84, \"as\")\n",
+      "Interval(1.84, 2.0, \"a\")\n",
+      "Interval(2.0, 2.48, \"student\")\n",
+      "Interval(2.52, 2.8, \"is\")\n",
+      "Interval(2.8, 2.98, \"who\")\n",
+      "Interval(2.98, 3.09, \"your\")\n",
+      "Interval(3.09, 3.68, \"connections\")\n",
+      "Interval(3.68, 3.94, \"are\")\n"
      ]
     }
    ],
    "source": [
     "import tgt\n",
     "\n",
-    "tg = tgt.read_textgrid(\"/data/user_data/haolingp/outputs/mfa_output/utt_0.TextGrid\")\n",
+    "tg = tgt.read_textgrid(\"/data/user_data/haolingp/outputs/mfa_output/utt_000008.TextGrid\")\n",
     "\n",
     "words = tg.get_tier_by_name(\"words\")\n",
     "phones = tg.get_tier_by_name(\"phones\")\n",
