Move codes into data_synthesis/

--- a/data_synthesis/codes/test_demo_yodas.ipynb
+++ b/data_synthesis/codes/test_demo_yodas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "244b7073",
    "metadata": {},
    "outputs": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "c8a4d1cb",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,9 @@
    ],
    "source": [
     "file_name = df[\"audio\"].iloc[0][\"path\"]\n",
-    "print(f\"file_name : {file_name}\")"
+    "# print(f\"file_name : {file_name}\")\n",
+    "print(df.dtypes)\n",
+    "print(df.iloc[41])"
    ]
   },
   {
